Fix some layout issues, center stuff

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -4,7 +4,6 @@
     background-color: #f4f4f4;
     width: 100%;
     padding: 16px 0 16px 0;
-    position: fixed;
     top: 0;
 }
 
